--- a/src/app/forum/forum-categories/forum-categories-recent-topics/forum-categories-recent-topics.component.html
+++ b/src/app/forum/forum-categories/forum-categories-recent-topics/forum-categories-recent-topics.component.html
@@ -1,4 +1,4 @@
-@for (recentTopic of recentTopics; track trackBy($index, recentTopic)) {
+@for (recentTopic of recentTopics(); track trackBy($index, recentTopic)) {
   <div>
     <a
     [routerLink]="[
