--- a/src/app/score/score-list/score-list-responsive/score-list-responsive.component.html
+++ b/src/app/score/score-list/score-list-responsive/score-list-responsive.component.html
@@ -1,27 +1,27 @@
 @if (isSmall$ | async) {
   <bio-score-list
-    [scores]="scores"
-    [loading]="loading"
-    [itemsPerPageOptions]="itemsPerPageOptions"
-    [paginationMeta]="paginationMeta"
-    [title]="title"
+    [scores]="scores()"
+    [loading]="loading()"
+    [itemsPerPageOptions]="itemsPerPageOptions()"
+    [paginationMeta]="paginationMeta()"
+    [title]="title()"
     [collapsable]="collapsable"
-    [disabledProperty]="disabledProperty"
+    [disabledProperty]="disabledProperty()"
     (currentPageChange)="currentPageChange.emit($event)"
     (itemsPerPageChange)="itemsPerPageChange.emit($event)"
     (scoreClicked)="scoreClicked.emit($event)"
   ></bio-score-list>
 } @else {
   <bio-table
-    [title]="title"
-    [colDefs]="colDefs"
-    [order]="order"
-    [colDefDefault]="colDefDefault"
-    [data]="scores"
-    [loading]="loading"
-    [metadata]="metadata"
-    [itemsPerPageOptions]="itemsPerPageOptions"
-    [paginationMeta]="paginationMeta"
+    [title]="title()"
+    [colDefs]="colDefs()"
+    [order]="order()"
+    [colDefDefault]="colDefDefault()"
+    [data]="scores()"
+    [loading]="loading()"
+    [metadata]="metadata()"
+    [itemsPerPageOptions]="itemsPerPageOptions()"
+    [paginationMeta]="paginationMeta()"
     [collapsable]="collapsable"
     (currentPageChange)="currentPageChange.emit($event)"
     (itemsPerPageChange)="itemsPerPageChange.emit($event)"
