--- a/src/app/shared/components/pagination/pagination.component.html
+++ b/src/app/shared/components/pagination/pagination.component.html
@@ -2,12 +2,12 @@
   <div class="items-per-page">
     <span> Items per page: </span>
     <bio-select
-      [disabled]="!itemCount || disabled"
-      [model]="itemsPerPage"
+      [disabled]="!itemCount() || disabled"
+      [model]="itemsPerPage()"
       (modelChange)="itemsPerPageChange.emit($event)"
       placeholder="Items per page"
       >
-      @for (option of itemsPerPageOptions; track trackByNumber($index, option)) {
+      @for (option of itemsPerPageOptions(); track trackByNumber($index, option)) {
         <bio-option [value]="option">
           {{ option }}
         </bio-option>
@@ -17,14 +17,14 @@
 }
 <div class="buttons">
   <span>
-    {{ (currentPage - 1) * itemsPerPage + 1 }} - {{ currentPage * itemsPerPage | min: totalItems }} of {{ totalItems }}
+    {{ (currentPage() - 1) * itemsPerPage() + 1 }} - {{ currentPage() * itemsPerPage() | min: totalItems() }} of {{ totalItems() }}
   </span>
   <button
     bioButton
     icon
     type="button"
     (click)="onFirstPage()"
-    [disabled]="!itemCount || currentPage === 1 || disabled"
+    [disabled]="!itemCount() || currentPage() === 1 || disabled"
     bioTooltip="First page"
     >
     <bio-icon>first_page</bio-icon>
@@ -34,7 +34,7 @@
     icon
     type="button"
     (click)="onPreviousPage()"
-    [disabled]="!itemCount || currentPage === 1 || disabled"
+    [disabled]="!itemCount() || currentPage() === 1 || disabled"
     bioTooltip="Previous page"
     >
     <bio-icon>chevron_left</bio-icon>
@@ -44,7 +44,7 @@
     icon
     type="button"
     (click)="onNextPage()"
-    [disabled]="!itemCount || currentPage === totalPages || disabled"
+    [disabled]="!itemCount() || currentPage() === totalPages() || disabled"
     bioTooltip="Next page"
     >
     <bio-icon>chevron_right</bio-icon>
@@ -54,7 +54,7 @@
     icon
     type="button"
     (click)="onLastPage()"
-    [disabled]="!itemCount || currentPage === totalPages || disabled"
+    [disabled]="!itemCount() || currentPage() === totalPages() || disabled"
     bioTooltip="Last page"
     >
     <bio-icon>last_page</bio-icon>
