--- a/src/app/shared/components/select/select.component.html
+++ b/src/app/shared/components/select/select.component.html
@@ -1,4 +1,4 @@
-<div class="select-value" [class.placeholder]="!viewValue && placeholder" [innerHTML]="viewValue || placeholder"></div>
+<div class="select-value" [class.placeholder]="!viewValue && placeholder()" [innerHTML]="viewValue || placeholder()"></div>
 <div class="select-icon">
   <bio-icon small>keyboard_arrow_down</bio-icon>
 </div>
