--- a/src/app/shared/components/spinner/spinner.component.html
+++ b/src/app/shared/components/spinner/spinner.component.html
@@ -1,7 +1,7 @@
 <svg
   xmlns="http://www.w3.org/2000/svg"
-  [attr.width]="baseSize * size + 'px'"
-  [attr.height]="baseSize * size + 'px'"
+  [attr.width]="baseSize() * size + 'px'"
+  [attr.height]="baseSize() * size + 'px'"
   viewBox="0 0 100 100"
   preserveAspectRatio="xMidYMid"
 >
