--- a/src/app/score/score-info/score-info.component.html
+++ b/src/app/score/score-info/score-info.component.html
@@ -1,25 +1,25 @@
 <div class="title">Platform:</div>
-<div class="value">{{ score.platformName }}</div>
+<div class="value">{{ score().platformName }}</div>
 <div class="title">Game:</div>
-<div class="value">{{ score.gameName }}</div>
+<div class="value">{{ score().gameName }}</div>
 <div class="title">Mini game:</div>
-<div class="value">{{ score.miniGameName }}</div>
+<div class="value">{{ score().miniGameName }}</div>
 <div class="title">Mode:</div>
-<div class="value">{{ score.modeName }}</div>
+<div class="value">{{ score().modeName }}</div>
 <div class="title">Stage:</div>
-<div class="value">{{ score.stageName }}</div>
+<div class="value">{{ score().stageName }}</div>
 <div class="title">Score:</div>
 <div class="value">
-  {{ score.score | number: '1.0-0' }}
+  {{ score().score | number: '1.0-0' }}
   @if (showWorldRecord) {
-    @if (score.isWorldRecord) {
+    @if (score().isWorldRecord) {
       <bio-icon
         [mdi]="mdiTrophy"
         bioTooltip="World Record"
         bioTooltipPosition="right"
       ></bio-icon>
     }
-    @if (score.isCombinationWorldRecord) {
+    @if (score().isCombinationWorldRecord) {
       <bio-icon
         [mdi]="mdiTrophyAward"
         bioTooltip="Combination World Record"
@@ -32,16 +32,16 @@
   <div class="title">Approval date:</div>
 }
 @if (showApprovalDate) {
-  <div class="value">{{ score.approvalDate | authDateFormat }}</div>
+  <div class="value">{{ score().approvalDate | authDateFormat }}</div>
 }
 <div class="title">Creation date:</div>
-<div class="value">{{ score.creationDate | authDateFormat }}</div>
-@if (score.achievedDate) {
+<div class="value">{{ score().creationDate | authDateFormat }}</div>
+@if (score().achievedDate) {
   <div class="title">Achieved date:</div>
-  <div class="value">{{ score.achievedDate | authDateFormat }}</div>
+  <div class="value">{{ score().achievedDate | authDateFormat }}</div>
 }
 
-@for (player of score.scorePlayers; track trackById($index, player)) {
+@for (player of score().scorePlayers; track trackById($index, player)) {
   <div class="title">Player {{ $index + 1 }}:</div>
   <div class="value redirect-icon">
     {{ player.playerPersonaName }}
