--- a/src/app/shared/components/icon/icon-mdi.component.html
+++ b/src/app/shared/components/icon/icon-mdi.component.html
@@ -1,3 +1,3 @@
-<svg viewBox="0 0 24 24" [style.width.px]="size">
-  <path [attr.d]="mdi" d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z" />
+<svg viewBox="0 0 24 24" [style.width.px]="size()">
+  <path [attr.d]="mdi()" d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z" />
 </svg>
