--- a/src/app/shared/components/select/optgroup.component.html
+++ b/src/app/shared/components/select/optgroup.component.html
@@ -7,7 +7,7 @@
       [disabled]="isDisabled"
     ></bio-checkbox>
   }
-  {{ label }}
+  {{ label() }}
 </div>
 <div class="options">
   <ng-content></ng-content>
