--- a/src/app/shared/components/table/table-cell/table-cell.component.html
+++ b/src/app/shared/components/table/table-cell/table-cell.component.html
@@ -1,16 +1,16 @@
-@if (!colDef.component) {
-  @if (colDef.template) {
+@if (!colDef().component) {
+  @if (colDef().template) {
     <ng-container
-      [ngTemplateOutlet]="colDef.template"
-      [ngTemplateOutletContext]="{ item: item, colDef: colDef }"
+      [ngTemplateOutlet]="colDef().template"
+      [ngTemplateOutletContext]="{ item: item(), colDef: colDef() }"
       >
     </ng-container>
   } @else {
     <span
-      *ngLet="item[colDef.property] | tableCellFormatter: colDef.formatter as value"
-      [bioTooltip]="item | tableCellTooltip: colDef.tooltip:value"
-      [bioTooltipPosition]="colDef.tooltipPosition"
-      [bioTooltipDisabled]="!colDef.tooltip"
+      *ngLet="item()[colDef().property] | tableCellFormatter: colDef().formatter as value"
+      [bioTooltip]="item() | tableCellTooltip: colDef().tooltip:value"
+      [bioTooltipPosition]="colDef().tooltipPosition"
+      [bioTooltipDisabled]="!colDef().tooltip"
       >
       {{ value }}
     </span>
