--- a/src/app/shared/components/select/select.component.html
+++ b/src/app/shared/components/select/select.component.html
@@ -4,7 +4,7 @@
 </div>
 <ng-template #panel>
   <div
-    class="select-panel height-{{ (options?.length || 0) + (optgroups?.length || 0) }}"
+    class="select-panel height-{{ (options()?.length || 0) + (optgroups()?.length || 0) }}"
     tabindex="0"
     (keydown)="onPanelKeydown($event)"
     cdkTrapFocus
